tests/NormalTests/paczka1/fuzzy1/65991936.err
Error in line 1: YBcS S684 47,4
Error in line 11: nC95k2ws S289 77,3
Error in line 18: nC95k2ws S514 -1,0
Error in line 22: YBcS S289 37,57
Error in line 23: A896 S289 14,3
Error in line 16: YBcS S684 53,9
Error in line 20: 5EAXUu1Ttt S289 0,0
Error in line 34: 5EAXUu1Ttt S684 32,0
Error in line 33: rAagN07tx S684 82,9
